--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,1 +1,17 @@
 <h1>New Post</h1>
+
+<%= form_with model: @post do |form| %>
+  <p>
+  <%= form.label "author" %>
+  <%= form.text_field "author" %>
+  </p>
+
+  <%= form.label "body" %>
+  <%= form.text_field "body" %>
+
+  <%= form.label "image" %>
+  <%= form.text_field "image" %>
+
+  <%= form.submit %>
+
+<% end %>
